--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=CashLife
+
+# Spring DataSource Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/db_cashlife?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=123456789
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Spring Data JPA Configuration
+spring.jpa.show-sql=true
+
+#Spring Data JPA Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# Elements take their values from maven pom.xml build-related information
+documentation.application.description=@project.description@
+documentation.application.version=@project.version@
+
+authorization.jwt.secret = WriteHereYourSecretStringForTokenSigningCredentials
+authorization.jwt.expiration.days = 7
